--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,13 +8,13 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
-  
+
 variables:
   imageName: 'pipelines-javascript-docker'
 
 steps:
 - script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  displayName: 'Run a one-line script yeah'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
